--- a/packswap/package.json
+++ b/packswap/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@tailwindcss/forms": "^0.5.7",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
