--- a/packswap/package.json
+++ b/packswap/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@react-google-maps/api": "^2.19.2",
     "@tailwindcss/forms": "^0.5.7",
     "next": "14.0.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.55.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -28,5 +31,15 @@
     "prisma": "^5.9.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "@prisma/client": "^5.9.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "next": "14.0.3",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "18.2.7"
+  },
+  "compilerOptions": {
+    "skipLibCheck": true
   }
 }
